--- a/prepare_data.ipynb
+++ b/prepare_data.ipynb
@@ -197,7 +197,7 @@
     }
    ],
    "source": [
-    "files_path = \"../Gruppi/Gruppi\"\n",
+    "files_path = \"PATH/OF/DATA\"\n",
     "export_path = \"data/2021\"\n",
     "\n",
     "df = data_processing (files_path, export_path, tdc_resolution = 1e-9)\n",
