--- a/prepare_data.ipynb
+++ b/prepare_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -51,120 +51,120 @@
        "      <th>0</th>\n",
        "      <td>H1</td>\n",
        "      <td>1.000000e-09</td>\n",
-       "      <td>8.005824e+06</td>\n",
-       "      <td>0.812025</td>\n",
+       "      <td>5.509700e-08</td>\n",
+       "      <td>1.186573</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>F2</td>\n",
        "      <td>1.000000e-09</td>\n",
-       "      <td>8.970437e+06</td>\n",
-       "      <td>0.896228</td>\n",
+       "      <td>-2.856920e-08</td>\n",
+       "      <td>1.199157</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>C1</td>\n",
        "      <td>1.000000e-09</td>\n",
-       "      <td>1.269861e+06</td>\n",
-       "      <td>0.824515</td>\n",
+       "      <td>5.984656e-08</td>\n",
+       "      <td>1.145288</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>D1</td>\n",
        "      <td>1.000000e-09</td>\n",
-       "      <td>7.890701e+06</td>\n",
-       "      <td>0.828368</td>\n",
+       "      <td>-1.272536e-08</td>\n",
+       "      <td>1.089021</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>G1</td>\n",
        "      <td>1.000000e-09</td>\n",
-       "      <td>4.807176e+05</td>\n",
-       "      <td>1.127065</td>\n",
+       "      <td>5.411737e-09</td>\n",
+       "      <td>1.174235</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>A2</td>\n",
        "      <td>1.000000e-09</td>\n",
-       "      <td>7.176297e+06</td>\n",
-       "      <td>0.894519</td>\n",
+       "      <td>1.841254e-08</td>\n",
+       "      <td>1.052312</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
        "      <td>I2</td>\n",
        "      <td>1.000000e-09</td>\n",
-       "      <td>6.263687e+06</td>\n",
-       "      <td>0.801306</td>\n",
+       "      <td>-1.795460e-08</td>\n",
+       "      <td>1.041797</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
        "      <td>E1</td>\n",
        "      <td>1.000000e-09</td>\n",
-       "      <td>4.603114e+06</td>\n",
-       "      <td>1.100148</td>\n",
+       "      <td>5.798585e-08</td>\n",
+       "      <td>1.133843</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
        "      <td>G2</td>\n",
        "      <td>1.000000e-09</td>\n",
-       "      <td>9.625037e+06</td>\n",
-       "      <td>0.862122</td>\n",
+       "      <td>6.258280e-09</td>\n",
+       "      <td>0.820101</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
        "      <td>D2</td>\n",
        "      <td>1.000000e-09</td>\n",
-       "      <td>8.029322e+06</td>\n",
-       "      <td>1.167046</td>\n",
+       "      <td>-7.925701e-08</td>\n",
+       "      <td>0.883519</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
        "      <td>H2</td>\n",
        "      <td>1.000000e-09</td>\n",
-       "      <td>9.509574e+06</td>\n",
-       "      <td>0.932335</td>\n",
+       "      <td>-6.505696e-08</td>\n",
+       "      <td>1.146715</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
        "      <td>E2</td>\n",
        "      <td>1.000000e-09</td>\n",
-       "      <td>6.871680e+06</td>\n",
-       "      <td>1.163054</td>\n",
+       "      <td>-4.972511e-08</td>\n",
+       "      <td>1.083863</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12</th>\n",
        "      <td>B1</td>\n",
        "      <td>1.000000e-09</td>\n",
-       "      <td>7.804345e+06</td>\n",
-       "      <td>1.127435</td>\n",
+       "      <td>1.083204e-08</td>\n",
+       "      <td>1.183133</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13</th>\n",
        "      <td>F1</td>\n",
        "      <td>1.000000e-09</td>\n",
-       "      <td>4.987731e+06</td>\n",
-       "      <td>1.177617</td>\n",
+       "      <td>7.774456e-08</td>\n",
+       "      <td>1.132556</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14</th>\n",
        "      <td>I1</td>\n",
        "      <td>1.000000e-09</td>\n",
-       "      <td>7.256548e+06</td>\n",
-       "      <td>0.840013</td>\n",
+       "      <td>2.937135e-10</td>\n",
+       "      <td>0.839620</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>15</th>\n",
        "      <td>B2</td>\n",
        "      <td>1.000000e-09</td>\n",
-       "      <td>8.356535e+06</td>\n",
-       "      <td>0.856459</td>\n",
+       "      <td>-7.485190e-08</td>\n",
+       "      <td>1.122727</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>16</th>\n",
        "      <td>C2</td>\n",
        "      <td>1.000000e-09</td>\n",
-       "      <td>3.941592e+06</td>\n",
-       "      <td>0.916980</td>\n",
+       "      <td>-9.569672e-08</td>\n",
+       "      <td>1.180047</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -172,26 +172,26 @@
       ],
       "text/plain": [
        "   Group  TDC resolution       theta_0   theta_1\n",
-       "0     H1    1.000000e-09  8.005824e+06  0.812025\n",
-       "1     F2    1.000000e-09  8.970437e+06  0.896228\n",
-       "2     C1    1.000000e-09  1.269861e+06  0.824515\n",
-       "3     D1    1.000000e-09  7.890701e+06  0.828368\n",
-       "4     G1    1.000000e-09  4.807176e+05  1.127065\n",
-       "5     A2    1.000000e-09  7.176297e+06  0.894519\n",
-       "6     I2    1.000000e-09  6.263687e+06  0.801306\n",
-       "7     E1    1.000000e-09  4.603114e+06  1.100148\n",
-       "8     G2    1.000000e-09  9.625037e+06  0.862122\n",
-       "9     D2    1.000000e-09  8.029322e+06  1.167046\n",
-       "10    H2    1.000000e-09  9.509574e+06  0.932335\n",
-       "11    E2    1.000000e-09  6.871680e+06  1.163054\n",
-       "12    B1    1.000000e-09  7.804345e+06  1.127435\n",
-       "13    F1    1.000000e-09  4.987731e+06  1.177617\n",
-       "14    I1    1.000000e-09  7.256548e+06  0.840013\n",
-       "15    B2    1.000000e-09  8.356535e+06  0.856459\n",
-       "16    C2    1.000000e-09  3.941592e+06  0.916980"
+       "0     H1    1.000000e-09  5.509700e-08  1.186573\n",
+       "1     F2    1.000000e-09 -2.856920e-08  1.199157\n",
+       "2     C1    1.000000e-09  5.984656e-08  1.145288\n",
+       "3     D1    1.000000e-09 -1.272536e-08  1.089021\n",
+       "4     G1    1.000000e-09  5.411737e-09  1.174235\n",
+       "5     A2    1.000000e-09  1.841254e-08  1.052312\n",
+       "6     I2    1.000000e-09 -1.795460e-08  1.041797\n",
+       "7     E1    1.000000e-09  5.798585e-08  1.133843\n",
+       "8     G2    1.000000e-09  6.258280e-09  0.820101\n",
+       "9     D2    1.000000e-09 -7.925701e-08  0.883519\n",
+       "10    H2    1.000000e-09 -6.505696e-08  1.146715\n",
+       "11    E2    1.000000e-09 -4.972511e-08  1.083863\n",
+       "12    B1    1.000000e-09  1.083204e-08  1.183133\n",
+       "13    F1    1.000000e-09  7.774456e-08  1.132556\n",
+       "14    I1    1.000000e-09  2.937135e-10  0.839620\n",
+       "15    B2    1.000000e-09 -7.485190e-08  1.122727\n",
+       "16    C2    1.000000e-09 -9.569672e-08  1.180047"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,6 +219,136 @@
     "file_name = f\"manipulation_{version}\"\n",
     "\n",
     "df.to_csv ( f\"data/manipulation/{file_name}.txt\", header = df.columns, index = None, sep = \" \" )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>TDC</th>\n",
+       "      <th>QDC1</th>\n",
+       "      <th>QDC2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2.039070e-06</td>\n",
+       "      <td>-2.894791e-09</td>\n",
+       "      <td>-2.840624e-09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>5.744493e-06</td>\n",
+       "      <td>-2.869791e-09</td>\n",
+       "      <td>-2.879166e-09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>7.089725e-06</td>\n",
+       "      <td>-2.871874e-09</td>\n",
+       "      <td>-2.877083e-09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>3.384776e-06</td>\n",
+       "      <td>-2.920833e-09</td>\n",
+       "      <td>-2.972916e-09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>4.732199e-06</td>\n",
+       "      <td>-2.887499e-09</td>\n",
+       "      <td>-2.838541e-09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5649</th>\n",
+       "      <td>1.142720e-06</td>\n",
+       "      <td>-4.796875e-09</td>\n",
+       "      <td>-6.608335e-09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5650</th>\n",
+       "      <td>6.080609e-06</td>\n",
+       "      <td>-2.802083e-09</td>\n",
+       "      <td>-2.714583e-09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5651</th>\n",
+       "      <td>8.439002e-06</td>\n",
+       "      <td>-2.791666e-09</td>\n",
+       "      <td>-2.792708e-09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5652</th>\n",
+       "      <td>9.590834e-07</td>\n",
+       "      <td>-8.311460e-09</td>\n",
+       "      <td>-6.264584e-09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5653</th>\n",
+       "      <td>1.079530e-05</td>\n",
+       "      <td>-2.793749e-09</td>\n",
+       "      <td>-2.802083e-09</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5653 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               TDC          QDC1          QDC2\n",
+       "1     2.039070e-06 -2.894791e-09 -2.840624e-09\n",
+       "2     5.744493e-06 -2.869791e-09 -2.879166e-09\n",
+       "3     7.089725e-06 -2.871874e-09 -2.877083e-09\n",
+       "4     3.384776e-06 -2.920833e-09 -2.972916e-09\n",
+       "5     4.732199e-06 -2.887499e-09 -2.838541e-09\n",
+       "...            ...           ...           ...\n",
+       "5649  1.142720e-06 -4.796875e-09 -6.608335e-09\n",
+       "5650  6.080609e-06 -2.802083e-09 -2.714583e-09\n",
+       "5651  8.439002e-06 -2.791666e-09 -2.792708e-09\n",
+       "5652  9.590834e-07 -8.311460e-09 -6.264584e-09\n",
+       "5653  1.079530e-05 -2.793749e-09 -2.802083e-09\n",
+       "\n",
+       "[5653 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = pd.read_csv ( f\"{export_path}/data_A2.txt\", header = 4, delim_whitespace = True).drop([0] )\n",
+    "data"
    ]
   },
   {
