aggiunta lettura file

--- a/Calibrazione_oscilloscopio_2021.ipynb
+++ b/Calibrazione_oscilloscopio_2021.ipynb
@@ -45,7 +45,7 @@
         "import pandas as pd\n",
         "import matplotlib.pyplot as plt"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -57,8 +57,48 @@
         "## INSERIRE NUMERO DEL GRUPPO\n",
         "group = \"F2\"   # esempio"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "2N5TqX6CoqpA",
+        "outputId": "42725f07-e35b-468c-fd02-8f825635729f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "from urllib.request import urlopen\n",
+        "\n",
+        "data = urlopen (f\"https://raw.githubusercontent.com/mbarbetti/unifi-physics-lab3/main/data/2021/data_{group}.txt\")\n",
+        "\n",
+        "for i, line in enumerate(data):\n",
+        "  print (line.decode('utf-8'))\n",
+        "  if i == 5: break"
+      ],
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "DATI MISURA\n",
+            "\n",
+            "\n",
+            "\n",
+            "Inizio misura: 04/11/2021 17:13:56\n",
+            "\n",
+            "Tempo di acquisizione (sec): 164273.7\n",
+            "\n",
+            "Eventi acquisiti: 16030\n",
+            "\n",
+            "\n",
+            "\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
