--- a/prepare_data.ipynb
+++ b/prepare_data.ipynb
@@ -18,6 +18,23 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "from urllib.request import urlopen\n",
+    "\n",
+    "file = urlopen(f\"https://raw.githubusercontent.com/mbarbetti/unifi-physics-lab3/main/data/2021/data_A1.txt\")\n",
+    "\n",
+    "#list_data = list()\n",
+    "#for line in file:\n",
+    "# list_data . append (line.decode(\"utf-8\"))\n",
+    "\n",
+    "#print (len(list_data))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -51,120 +68,155 @@
        "      <th>0</th>\n",
        "      <td>H1</td>\n",
        "      <td>1.000000e-09</td>\n",
-       "      <td>5.509700e-08</td>\n",
-       "      <td>1.186573</td>\n",
+       "      <td>-4.302463e-09</td>\n",
+       "      <td>0.894084</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>F2</td>\n",
        "      <td>1.000000e-09</td>\n",
-       "      <td>-2.856920e-08</td>\n",
-       "      <td>1.199157</td>\n",
+       "      <td>-3.884088e-09</td>\n",
+       "      <td>0.818788</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>C1</td>\n",
        "      <td>1.000000e-09</td>\n",
-       "      <td>5.984656e-08</td>\n",
-       "      <td>1.145288</td>\n",
+       "      <td>5.615007e-08</td>\n",
+       "      <td>1.071039</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>D1</td>\n",
+       "      <td>M2</td>\n",
        "      <td>1.000000e-09</td>\n",
-       "      <td>-1.272536e-08</td>\n",
-       "      <td>1.089021</td>\n",
+       "      <td>7.055282e-09</td>\n",
+       "      <td>0.966609</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>G1</td>\n",
+       "      <td>A1</td>\n",
        "      <td>1.000000e-09</td>\n",
-       "      <td>5.411737e-09</td>\n",
-       "      <td>1.174235</td>\n",
+       "      <td>9.565368e-08</td>\n",
+       "      <td>1.175509</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>A2</td>\n",
+       "      <td>D1</td>\n",
        "      <td>1.000000e-09</td>\n",
-       "      <td>1.841254e-08</td>\n",
-       "      <td>1.052312</td>\n",
+       "      <td>-9.485252e-08</td>\n",
+       "      <td>1.183850</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>I2</td>\n",
+       "      <td>G1</td>\n",
        "      <td>1.000000e-09</td>\n",
-       "      <td>-1.795460e-08</td>\n",
-       "      <td>1.041797</td>\n",
+       "      <td>-2.617468e-08</td>\n",
+       "      <td>0.867405</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>E1</td>\n",
+       "      <td>A2</td>\n",
        "      <td>1.000000e-09</td>\n",
-       "      <td>5.798585e-08</td>\n",
-       "      <td>1.133843</td>\n",
+       "      <td>-9.247325e-08</td>\n",
+       "      <td>1.191295</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>G2</td>\n",
+       "      <td>I2</td>\n",
        "      <td>1.000000e-09</td>\n",
-       "      <td>6.258280e-09</td>\n",
-       "      <td>0.820101</td>\n",
+       "      <td>3.922536e-08</td>\n",
+       "      <td>0.810140</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
-       "      <td>D2</td>\n",
+       "      <td>E1</td>\n",
        "      <td>1.000000e-09</td>\n",
-       "      <td>-7.925701e-08</td>\n",
-       "      <td>0.883519</td>\n",
+       "      <td>-8.552598e-08</td>\n",
+       "      <td>1.015219</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
-       "      <td>H2</td>\n",
+       "      <td>M1</td>\n",
        "      <td>1.000000e-09</td>\n",
-       "      <td>-6.505696e-08</td>\n",
-       "      <td>1.146715</td>\n",
+       "      <td>1.919863e-08</td>\n",
+       "      <td>1.063088</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
-       "      <td>E2</td>\n",
+       "      <td>L2</td>\n",
        "      <td>1.000000e-09</td>\n",
-       "      <td>-4.972511e-08</td>\n",
-       "      <td>1.083863</td>\n",
+       "      <td>3.305320e-08</td>\n",
+       "      <td>1.026705</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12</th>\n",
-       "      <td>B1</td>\n",
+       "      <td>G2</td>\n",
        "      <td>1.000000e-09</td>\n",
-       "      <td>1.083204e-08</td>\n",
-       "      <td>1.183133</td>\n",
+       "      <td>3.519425e-08</td>\n",
+       "      <td>1.094493</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13</th>\n",
-       "      <td>F1</td>\n",
+       "      <td>D2</td>\n",
        "      <td>1.000000e-09</td>\n",
-       "      <td>7.774456e-08</td>\n",
-       "      <td>1.132556</td>\n",
+       "      <td>9.489726e-08</td>\n",
+       "      <td>0.822722</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14</th>\n",
-       "      <td>I1</td>\n",
+       "      <td>H2</td>\n",
        "      <td>1.000000e-09</td>\n",
-       "      <td>2.937135e-10</td>\n",
-       "      <td>0.839620</td>\n",
+       "      <td>7.363812e-08</td>\n",
+       "      <td>0.981798</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>15</th>\n",
-       "      <td>B2</td>\n",
+       "      <td>E2</td>\n",
        "      <td>1.000000e-09</td>\n",
-       "      <td>-7.485190e-08</td>\n",
-       "      <td>1.122727</td>\n",
+       "      <td>-5.953871e-10</td>\n",
+       "      <td>0.959322</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>16</th>\n",
+       "      <td>B1</td>\n",
+       "      <td>1.000000e-09</td>\n",
+       "      <td>1.750108e-08</td>\n",
+       "      <td>0.896367</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>F1</td>\n",
+       "      <td>1.000000e-09</td>\n",
+       "      <td>-2.858492e-08</td>\n",
+       "      <td>1.172151</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>L1</td>\n",
+       "      <td>1.000000e-09</td>\n",
+       "      <td>-4.793437e-08</td>\n",
+       "      <td>0.853500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>I1</td>\n",
+       "      <td>1.000000e-09</td>\n",
+       "      <td>5.655717e-08</td>\n",
+       "      <td>1.032958</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>B2</td>\n",
+       "      <td>1.000000e-09</td>\n",
+       "      <td>-8.211396e-09</td>\n",
+       "      <td>0.953937</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
        "      <td>C2</td>\n",
        "      <td>1.000000e-09</td>\n",
-       "      <td>-9.569672e-08</td>\n",
-       "      <td>1.180047</td>\n",
+       "      <td>9.149451e-08</td>\n",
+       "      <td>0.810390</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -172,32 +224,37 @@
       ],
       "text/plain": [
        "   Group  TDC resolution       theta_0   theta_1\n",
-       "0     H1    1.000000e-09  5.509700e-08  1.186573\n",
-       "1     F2    1.000000e-09 -2.856920e-08  1.199157\n",
-       "2     C1    1.000000e-09  5.984656e-08  1.145288\n",
-       "3     D1    1.000000e-09 -1.272536e-08  1.089021\n",
-       "4     G1    1.000000e-09  5.411737e-09  1.174235\n",
-       "5     A2    1.000000e-09  1.841254e-08  1.052312\n",
-       "6     I2    1.000000e-09 -1.795460e-08  1.041797\n",
-       "7     E1    1.000000e-09  5.798585e-08  1.133843\n",
-       "8     G2    1.000000e-09  6.258280e-09  0.820101\n",
-       "9     D2    1.000000e-09 -7.925701e-08  0.883519\n",
-       "10    H2    1.000000e-09 -6.505696e-08  1.146715\n",
-       "11    E2    1.000000e-09 -4.972511e-08  1.083863\n",
-       "12    B1    1.000000e-09  1.083204e-08  1.183133\n",
-       "13    F1    1.000000e-09  7.774456e-08  1.132556\n",
-       "14    I1    1.000000e-09  2.937135e-10  0.839620\n",
-       "15    B2    1.000000e-09 -7.485190e-08  1.122727\n",
-       "16    C2    1.000000e-09 -9.569672e-08  1.180047"
+       "0     H1    1.000000e-09 -4.302463e-09  0.894084\n",
+       "1     F2    1.000000e-09 -3.884088e-09  0.818788\n",
+       "2     C1    1.000000e-09  5.615007e-08  1.071039\n",
+       "3     M2    1.000000e-09  7.055282e-09  0.966609\n",
+       "4     A1    1.000000e-09  9.565368e-08  1.175509\n",
+       "5     D1    1.000000e-09 -9.485252e-08  1.183850\n",
+       "6     G1    1.000000e-09 -2.617468e-08  0.867405\n",
+       "7     A2    1.000000e-09 -9.247325e-08  1.191295\n",
+       "8     I2    1.000000e-09  3.922536e-08  0.810140\n",
+       "9     E1    1.000000e-09 -8.552598e-08  1.015219\n",
+       "10    M1    1.000000e-09  1.919863e-08  1.063088\n",
+       "11    L2    1.000000e-09  3.305320e-08  1.026705\n",
+       "12    G2    1.000000e-09  3.519425e-08  1.094493\n",
+       "13    D2    1.000000e-09  9.489726e-08  0.822722\n",
+       "14    H2    1.000000e-09  7.363812e-08  0.981798\n",
+       "15    E2    1.000000e-09 -5.953871e-10  0.959322\n",
+       "16    B1    1.000000e-09  1.750108e-08  0.896367\n",
+       "17    F1    1.000000e-09 -2.858492e-08  1.172151\n",
+       "18    L1    1.000000e-09 -4.793437e-08  0.853500\n",
+       "19    I1    1.000000e-09  5.655717e-08  1.032958\n",
+       "20    B2    1.000000e-09 -8.211396e-09  0.953937\n",
+       "21    C2    1.000000e-09  9.149451e-08  0.810390"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "files_path = \"PATH/OF/DATA\"\n",
+    "files_path = \"../data/Lab3_groups_2021\"\n",
     "export_path = \"data/2021\"\n",
     "\n",
     "df = data_processing (files_path, export_path, tdc_resolution = 1e-9)\n",
@@ -206,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -255,33 +312,33 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2.039070e-06</td>\n",
-       "      <td>-2.894791e-09</td>\n",
-       "      <td>-2.840624e-09</td>\n",
+       "      <td>8.193757e-06</td>\n",
+       "      <td>-6.237501e-09</td>\n",
+       "      <td>-4.093750e-09</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>5.744493e-06</td>\n",
-       "      <td>-2.869791e-09</td>\n",
-       "      <td>-2.879166e-09</td>\n",
+       "      <td>9.376144e-06</td>\n",
+       "      <td>-3.050000e-09</td>\n",
+       "      <td>-2.968750e-09</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>7.089725e-06</td>\n",
-       "      <td>-2.871874e-09</td>\n",
-       "      <td>-2.877083e-09</td>\n",
+       "      <td>9.714738e-06</td>\n",
+       "      <td>-2.927083e-09</td>\n",
+       "      <td>-2.935416e-09</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>3.384776e-06</td>\n",
-       "      <td>-2.920833e-09</td>\n",
-       "      <td>-2.972916e-09</td>\n",
+       "      <td>5.319017e-07</td>\n",
+       "      <td>-2.927083e-09</td>\n",
+       "      <td>-2.941666e-09</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>4.732199e-06</td>\n",
-       "      <td>-2.887499e-09</td>\n",
-       "      <td>-2.838541e-09</td>\n",
+       "      <td>3.816507e-06</td>\n",
+       "      <td>-3.515625e-09</td>\n",
+       "      <td>-3.368750e-09</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -290,64 +347,64 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5649</th>\n",
-       "      <td>1.142720e-06</td>\n",
-       "      <td>-4.796875e-09</td>\n",
-       "      <td>-6.608335e-09</td>\n",
+       "      <th>21117</th>\n",
+       "      <td>6.652753e-06</td>\n",
+       "      <td>-2.937500e-09</td>\n",
+       "      <td>-2.929166e-09</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5650</th>\n",
-       "      <td>6.080609e-06</td>\n",
-       "      <td>-2.802083e-09</td>\n",
-       "      <td>-2.714583e-09</td>\n",
+       "      <th>21118</th>\n",
+       "      <td>1.892251e-06</td>\n",
+       "      <td>-2.985416e-09</td>\n",
+       "      <td>-2.964583e-09</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5651</th>\n",
-       "      <td>8.439002e-06</td>\n",
-       "      <td>-2.791666e-09</td>\n",
-       "      <td>-2.792708e-09</td>\n",
+       "      <th>21119</th>\n",
+       "      <td>1.740821e-06</td>\n",
+       "      <td>-4.506250e-09</td>\n",
+       "      <td>-4.929167e-09</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5652</th>\n",
-       "      <td>9.590834e-07</td>\n",
-       "      <td>-8.311460e-09</td>\n",
-       "      <td>-6.264584e-09</td>\n",
+       "      <th>21120</th>\n",
+       "      <td>8.695099e-06</td>\n",
+       "      <td>-3.004166e-09</td>\n",
+       "      <td>-3.028125e-09</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5653</th>\n",
-       "      <td>1.079530e-05</td>\n",
-       "      <td>-2.793749e-09</td>\n",
-       "      <td>-2.802083e-09</td>\n",
+       "      <th>21121</th>\n",
+       "      <td>1.056560e-05</td>\n",
+       "      <td>-2.980208e-09</td>\n",
+       "      <td>-2.952083e-09</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5653 rows × 3 columns</p>\n",
+       "<p>21121 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "               TDC          QDC1          QDC2\n",
-       "1     2.039070e-06 -2.894791e-09 -2.840624e-09\n",
-       "2     5.744493e-06 -2.869791e-09 -2.879166e-09\n",
-       "3     7.089725e-06 -2.871874e-09 -2.877083e-09\n",
-       "4     3.384776e-06 -2.920833e-09 -2.972916e-09\n",
-       "5     4.732199e-06 -2.887499e-09 -2.838541e-09\n",
-       "...            ...           ...           ...\n",
-       "5649  1.142720e-06 -4.796875e-09 -6.608335e-09\n",
-       "5650  6.080609e-06 -2.802083e-09 -2.714583e-09\n",
-       "5651  8.439002e-06 -2.791666e-09 -2.792708e-09\n",
-       "5652  9.590834e-07 -8.311460e-09 -6.264584e-09\n",
-       "5653  1.079530e-05 -2.793749e-09 -2.802083e-09\n",
+       "                TDC          QDC1          QDC2\n",
+       "1      8.193757e-06 -6.237501e-09 -4.093750e-09\n",
+       "2      9.376144e-06 -3.050000e-09 -2.968750e-09\n",
+       "3      9.714738e-06 -2.927083e-09 -2.935416e-09\n",
+       "4      5.319017e-07 -2.927083e-09 -2.941666e-09\n",
+       "5      3.816507e-06 -3.515625e-09 -3.368750e-09\n",
+       "...             ...           ...           ...\n",
+       "21117  6.652753e-06 -2.937500e-09 -2.929166e-09\n",
+       "21118  1.892251e-06 -2.985416e-09 -2.964583e-09\n",
+       "21119  1.740821e-06 -4.506250e-09 -4.929167e-09\n",
+       "21120  8.695099e-06 -3.004166e-09 -3.028125e-09\n",
+       "21121  1.056560e-05 -2.980208e-09 -2.952083e-09\n",
        "\n",
-       "[5653 rows x 3 columns]"
+       "[21121 rows x 3 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data = pd.read_csv ( f\"{export_path}/data_A2.txt\", header = 4, delim_whitespace = True).drop([0] )\n",
+    "data = pd.read_csv ( f\"{export_path}/data_M1.txt\", header = 4, delim_whitespace = True).drop([0] )\n",
     "data"
    ]
   },
